tests/baselines/reference/checkJsdocTypeTagOnExportAssignment1.errors.txt
a.js(8,18): error TS2353: Object literal may only specify known properties, and 'c' does not exist in type 'Foo'.


==== checkJsdocTypeTagOnExportAssignment1.js (0 errors) ====
    
==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {boolean} a
     * @property {boolean} b
     */
    
    /** @type {Foo} */
    export default { c: false };
                     ~
!!! error TS2353: Object literal may only specify known properties, and 'c' does not exist in type 'Foo'.
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    